# opack_for_qemu

./: CMakeLists.txt  STM32F107XC_FLASH.ld
CMSIS/: cmsis_gcc.h  ram_test.s  startup_stm32f107xc.s  stm32f1xx.h  system_stm32f1xx.c
STM32F1xx_HAL_Driver/Inc/: stm32f1xx_hal_conf.h
project_src/: firm_updater.c  firm_updater.h  main.c  stm32f10x_it.c  stm32f10x_it.h
syscalls/: syscalls.c
